--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Functional lazy stream programming helpers",
   "main": "index.js",
   "scripts": {
+    "benchmark": "npm run build:benchmark && node build/benchmark.js",
+    "build:benchmark": "esbuild benchmark.js --bundle --platform=node --outfile=build/benchmark.js",
     "test": "jest"
   },
   "repository": {
@@ -29,6 +31,8 @@
     "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "benchmark": "^2.1.4",
+    "esbuild": "^0.13.3",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
